--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
+    "vue-fuse": "^2.2.1",
     "vue-router": "^3.1.6",
-    "vuex": "^3.1.3"
+    "vue-select": "^3.10.1",
+    "vue-svg-loader": "^0.16.0",
+    "vuex": "^3.1.3",
+    "vuex-persist": "^2.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.3.0",
